# cfmtoolbox-editor

./: .gitignore  .pre-commit-config.yaml  404.html  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml  sitemap.xml
.github/workflows/: blank.yml  docs.yml  lint.yml  test.yml
cfmtoolbox_editor/: __init__.py  calc_graph_Layout.py  cfm_editor.py  cfm_editor_undo_redo.py  logic.py  shortcuts.py  tooltip.py  utils.py
cfmtoolbox_editor/ui/: cfm_buttons.py  cfm_canvas.py  cfm_constraints.py  cfm_menubar.py  cfm_tooltip.py  constraint_dialog.py  delete_feature_dialog.py  feature_dialog.py
cfmtoolbox_editor/utils/: cfm_calc_graph_Layout.py  cfm_click_handler.py  cfm_editor_undo_redo.py  cfm_shortcuts.py  cfm_utils.py  utils.py
docs/: getting-started.md  index.md
docs/editor-usage/: add_constraint.md  add_feature.md  delete_constraint.md  delete_feature.md  edit_constraint.md  edit_feature.md
docs/framework/: contributing.md
docs/framework/api/: editor.md
docs/framework/api/ui/: canvas.md  constraints.md  dialogs.md  menubar.md  tooltip.md
editor-usage/add_constraint/: index.html
editor-usage/add_feature/: index.html
editor-usage/delete_constraint/: index.html
editor-usage/delete_feature/: index.html
editor-usage/edit_constraint/: index.html
editor-usage/edit_feature/: index.html
framework/api/editor/: index.html
framework/contributing/: index.html
getting-started/: index.html
search/: search_index.json
tests/: test_cfm_menubar.py  test_editor_undo_redo.py
tests/ui/: test_cfm_menubar.py
tests/utils/: test_editor_undo_redo.py
(+15 files in other folders)
