[tool.poetry]
name = "cfmtoolbox-editor"
version = "0.1.0"
description = ""
authors = ["Annika Kienle <annika.kienle@student.kit.edu>",  "Seid Jadadic <seid.jadadic@student.kit.edu>", "Kilian Tran <uhjrq@student.kit.edu"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.12"
cfmtoolbox = "^0.3.0"

[tool.poetry.group.dev.dependencies]
ruff = "^0.4.4"
pre-commit = "^3.7.0"
mypy = "^1.10.0"
pytest = "^8.2.0"
pytest-cov = "^5.0.0"
mkdocs = "^1.6.1"
mkdocs-material = "^9.5.34"
mkdocstrings-python = "^1.11.1"

[tool.poetry.dev-dependencies]
pre-commit = "^3.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.plugins."cfmtoolbox.plugins"]
edit = "cfmtoolbox_editor:edit"
